# traci

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  run.sh
docs/: _config.yml  index.markdown
docs/_includes/: content.md
src/: camera.rs  examples.rs  extra.rs  hittable.rs  light.rs  main.rs  material.rs  plane.rs  ray.rs  scene.rs  sphere.rs  triangle.rs  vec3.rs
src/hittable/: aabb.rs  bvh.rs  mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/superresolution/: superresolution.py
