[package]
name = "traci"
version = "0.1.0"
authors = ["iyaja <ajayuppili@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23.1"
approx = "0.4.0"
image = "0.23.12"
glam = "0.11.2"
indicatif = {version = "0.15.0", features = ["rayon"]}
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.5.0"
wavefront_obj = "9.0.0"
obj = "0.10.2"
tri-mesh = "0.5.0"